--- a/index.html
+++ b/index.html
@@ -401,16 +401,16 @@
 <body>
   <!-- =========================
     QUICK SETUP (CTRL+F these):
-    1) PHONE_NUMBER: (e.g., +1941XXXXXXX)
-    2) DISPLAY_PHONE: (e.g., (941) XXX-XXXX)
-    3) YOUR_EMAIL
+    1) +1-941-9936859: (e.g., +1941XXXXXXX)
+    2) (941) 993-6859: (e.g., (941) XXX-XXXX)
+    3) pointinexservices@gmail.com
     4) PASTE_YOUR_*_PHOTO_URL_HERE.jpg
   ========================== -->
 
   <!-- Replace these placeholders in the links below:
-    PHONE_NUMBER      -> +1-941-555-1234 (include +1)
-    DISPLAY_PHONE     -> (941) 555-1234
-    YOUR_EMAIL        -> you@domain.com
+    +1-941-9936859      -> +1-941-555-1234 (include +1)
+    (941) 993-6859     -> (941) 555-1234
+    pointinexservices@gmail.com        -> you@domain.com
   -->
 
   <header class="nav">
@@ -432,10 +432,10 @@
         </nav>
 
         <div class="btns" style="margin:0">
-          <a class="btn btn-primary" href="tel:PHONE_NUMBER" aria-label="Call Point Inex Services">
-            📞 <span>Call <small>DISPLAY_PHONE</small></span>
+          <a class="btn btn-primary" href="tel:+1-941-9936859" aria-label="Call Point Inex Services">
+            📞 <span>Call <small>(941) 993-6859</small></span>
           </a>
-          <a class="btn btn-ghost" href="sms:PHONE_NUMBER" aria-label="Text Point Inex Services">
+          <a class="btn btn-ghost" href="sms:+1-941-9936859" aria-label="Text Point Inex Services">
             💬 <span>Text <small>Fast estimate</small></span>
           </a>
         </div>
@@ -462,8 +462,8 @@
             </div>
 
             <div class="btns">
-              <a class="btn btn-primary" href="tel:PHONE_NUMBER">📞 Call for an estimate</a>
-              <a class="btn btn-ghost" href="sms:PHONE_NUMBER">💬 Text photos for a quick quote</a>
+              <a class="btn btn-primary" href="tel:+1-941-9936859">📞 Call for an estimate</a>
+              <a class="btn btn-ghost" href="sms:+1-941-9936859">💬 Text photos for a quick quote</a>
               <a class="btn btn-ghost" href="#gallery">🖼️ See our work</a>
             </div>
 
@@ -490,7 +490,7 @@
                 Send us your wall photo + TV size + rough idea. We’ll reply with options and a ballpark estimate.
               </p>
               <div class="btns" style="margin-top:14px">
-                <a class="btn btn-primary" href="sms:PHONE_NUMBER">💬 Text now</a>
+                <a class="btn btn-primary" href="sms:+1-941-9936859">💬 Text now</a>
                 <a class="btn btn-ghost" href="#contact">✍️ Request estimate</a>
               </div>
               <p class="kicker">Tip: include ceiling height + preferred style (modern, coastal, classic).</p>
@@ -582,8 +582,8 @@
         </div>
 
         <div class="btns" style="margin-top:18px">
-          <a class="btn btn-primary" href="tel:PHONE_NUMBER">📞 Call: DISPLAY_PHONE</a>
-          <a class="btn btn-ghost" href="sms:PHONE_NUMBER">💬 Text: get a quote</a>
+          <a class="btn btn-primary" href="tel:+1-941-9936859">📞 Call: (941) 993-6859</a>
+          <a class="btn btn-ghost" href="sms:+1-941-9936859">💬 Text: get a quote</a>
         </div>
       </div>
     </section>
@@ -716,7 +716,7 @@
         </div>
 
         <div class="btns" style="margin-top:18px">
-          <a class="btn btn-primary" href="sms:PHONE_NUMBER">💬 Text photos to start</a>
+          <a class="btn btn-primary" href="sms:+1-941-9936859">💬 Text photos to start</a>
           <a class="btn btn-ghost" href="#contact">✍️ Request an estimate</a>
         </div>
       </div>
@@ -780,7 +780,7 @@
           <div class="card" style="grid-column: span 6">
             <h3>Fast estimate tips</h3>
             <p>Send a wall photo, ceiling height, TV size, and your style idea (modern/coastal/classic). We’ll reply with options.</p>
-            <p class="kicker">Text: <strong>DISPLAY_PHONE</strong></p>
+            <p class="kicker">Text: <strong>(941) 993-6859</strong></p>
           </div>
         </div>
       </div>
@@ -852,16 +852,16 @@
               </button>
 
               <p class="fineprint">
-                Fastest response: <a href="sms:PHONE_NUMBER"><strong>Text DISPLAY_PHONE</strong></a> with photos of the wall.
+                Fastest response: <a href="sms:+1-941-9936859"><strong>Text (941) 993-6859</strong></a> with photos of the wall.
               </p>
             </form>
           </div>
 
           <aside class="card">
             <h3 style="margin-top:0">Call / Text</h3>
-            <p><strong>Phone:</strong> <a href="tel:PHONE_NUMBER">DISPLAY_PHONE</a></p>
-            <p><strong>Text:</strong> <a href="sms:PHONE_NUMBER">Send a message</a></p>
-            <p><strong>Email:</strong> <a href="mailto:YOUR_EMAIL">YOUR_EMAIL</a></p>
+            <p><strong>Phone:</strong> <a href="tel:+1-941-9936859">(941) 993-6859</a></p>
+            <p><strong>Text:</strong> <a href="sms:+1-941-9936859">Send a message</a></p>
+            <p><strong>Email:</strong> <a href="mailto:pointinexservices@gmail.com">pointinexservices@gmail.com</a></p>
 
             <div class="divider" aria-hidden="true"></div>
 
@@ -873,8 +873,8 @@
             </ul>
 
             <div class="btns">
-              <a class="btn btn-primary" href="tel:PHONE_NUMBER">📞 Call now</a>
-              <a class="btn btn-ghost" href="sms:PHONE_NUMBER">💬 Text photos</a>
+              <a class="btn btn-primary" href="tel:+1-941-9936859">📞 Call now</a>
+              <a class="btn btn-ghost" href="sms:+1-941-9936859">💬 Text photos</a>
             </div>
 
             <p class="kicker">Local service • Clean finishes • Clear communication</p>
@@ -915,3 +915,4 @@
 </body>
 </html>
 ```
+
